# ledBlinkSTM32F1

./: .clang-tidy  .cppcheck-suppressions  .gitignore  CMakeLists.txt  QUICKSTART_WINDOWS.md  README.md  STM32F103C8Tx_FLASH.ld  build.bat  build.ps1  build.sh  setup_hal.bat  setup_hal.sh
.github/workflows/: ci.yml  release.yml
cmake/: arm-none-eabi-gcc.cmake
include/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
src/: main.c  stm32f1xx_it.c  system_stm32f1xx.c
startup/: startup_stm32f103xb.s
